--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,16 @@
     "PostgreSQL": "User ID=postgres;Password=ifrn.cn;Host=localhost;Port=5432;Database=UniversidadeDB;"
   },
 
+  "Jwt":{
+    "Key": "aula#proginternet@ifrn$backend$developers"
+  },
+
+  "TokenConfiguration":{
+    "Audience": "IFRN_Alunos",
+    "Issuer": "Marques",
+    "ExpireHours" : 2
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
